--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
+server.port=5000
 
+# Database properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/bookshop?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=hbstudent
+spring.datasource.password=hbstudent
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Secret application properties
+spring.security.user.name=bookshop
+spring.security.user.password=bookshop
+
+# JWT Properties
+jwt.secret.key=bookshop
+jwt.expiration.time=60000
+jwt.cookie.name=Authorization
+
+# Refresh Token Properties
+refreshToken.expiration.time=120000
+refreshToken.cookie.name=RefreshToken
+
+# Mail Service
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lephuc0304@gmail.com
+spring.mail.password=lhpymwachjnhwvkn
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Activate account
+activate.account.expiration.time=60000
+
+# Custom Error Page
+server.error.whitelabel.enabled=false
+server.error.path=/error
